--- a/index.html
+++ b/index.html
@@ -4,73 +4,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>RapZone - Le meilleur de l'actu</title>
+    <title>RapZone</title>
+    <link rel="shortcut icon" href="./assets/img/Rap Zone.png">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-
     <header>
-        
-        <img src="assets/Rap Zone.png" alt="" class="logo">
-
-        <nav class="nav">
-            <li><a href="index.html">Acceuil</a></li>
-            <li><a href="mentions.html">Informations</a></li>
-            <li><a href="nosoffre.html">Nos offres</a></li>
-
-            <li><a href="contact.html">Nous contacter</a></li>
-
-
+        <nav>
+            <ul>
+                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="mentions.html">Informations</a></li>
+                <li><a href="nosoffre.html">Nos offres</a></li>
+                <li><a href="contact.html">Nous contacter</a></li>
+            </ul>
         </nav>
-
+        <h1 class="main-title">RapZone, votre musique partout</h1>
     </header>
-
-    <div class="presentation">
-        <h1>Pourquoi nous ?</h1>
-        <div class="box">
-            <img src="assets/icons/music.png" alt="Logo musique" class="logo-presentation">
-            <h2>Une très bonne expérience utilisateur</h2>
-            <img src="assets/icons/sensible.png" alt="Logo musique" class="logo-presentation logo2">
-            <h2>Beaucoup de visiteurs chaque jours</h2>
-            <img src="assets/icons/utilisateur.png" alt="Logo musique" class="logo-presentation logo2">
-            <h2>Il ne manque plus que vous</h2>
+    <h2 class="fil-title">Fil d'actualités</h2>
+    <div class="fil-actu">
+        <div class="actu">
+            <img src="https://static.fnac-static.com/multimedia/Images/FR/NR/f9/81/e7/15172089/1540-1/tsp20230221141224/Carre.jpg" alt="Album Werenoi">
+            <h2>Album "Carré" de Werenoi</h2>
+            <hr>
+            <p>L'album de Werenoi, sorti le 10 mars, est intitulé "Carré". Il comporte 18 titres, dont des collaborations avec des artistes tels que Ninho et Tiakola</p>
+            <div class="btn"><a target="_blank" href="https://www.cultura.com/p-carre-3700187680121.html">En savoir plus</a></div>
+        </div>
+        <div class="actu">
+            <img src="https://preview.redd.it/chrome-ziak-v0-dffdvdhwt4ka1.png?width=640&format=png&auto=webp&s=e3930ac938a5a7f133165ebe691387b93a7be872" alt="Album Ziak">
+            <h2>Album "Chrome" de Ziak</h2>
+            <hr>
+            <p>L'album de Ziak, sorti le 24 fevrier, est intitulé "Chrome". Il comporte 16 titres, dont des collaborations avec des artistes non communiquée</p>
+            <div class="btn"><a target="_blank" href="https://ziakimbo.com/collections/frontpage/products/album-chrome">En savoir plus</a></div>
+        </div>
+        <div class="actu">
+            <img src="https://cdns-images.dzcdn.net/images/cover/94ddba43313637ae9a0bcbd7c9b10ea5/500x500.jpg" alt="Album landy">
+            <h2>Album "Brave" de Landy</h2>
+            <hr>
+            <p>L'album de Landy, sorti le 24 fevrier, est intitulé "Brave". Il comporte 16 titres, dont des collaborations avec des artistes tels que Gazo et SDM.</p>
+            <div class="btn"><a target="_blank" href="https://sansrefrain.fr/albums/landy-brave/">En savoir plus</a></div>
+        </div>
+        <div class="actu">
+            <img src="https://static.fnac-static.com/multimedia/Images/FR/NR/ce/85/e6/15107534/1540-1/tsp20230208152142/Omerta.jpg" alt="Album Maes">
+            <h2>Album "Omerta" de Maes</h2>
+            <hr>
+            <p>L'album de Maes, sorti le 10 mars, est intitulé "Omerta". Il comporte 20 titres, dont des collaborations avec des artistes tels que Gazo et Niska.</p>
+            <div class="btn"><a target="_blank" href="https://www.deezer.com/fr/album/414434957">En savoir plus</a></div>
         </div>
     </div>
-    
-
-    <h1 class="titleNosActu">Nos Actualités</h1>
-    <div class="nos_actus">
-        <div class="pochette">
-            <img src="assets/actu1.jpg">
-            <div class="info">
-                <h3>Album "Omerta" de Maes</h3>
-                <p>L'album de Maes, sorti le 10 mars, est intitulé "Omerta". Il comporte 20 titres, dont des collaborations avec des artistes tels que Gazo et Niska.</p>
-            </div>
+    <h2>Les avis visiteurs</h2>
+    <br>
+    <div class="users-avis">
+        <div class="avis">
+            <h3>DylanMilo</h3>
+            <img src="./assets/img/icons/star.png" alt="">
+            <img src="./assets/img/icons/star.png" alt="">
+            <img src="./assets/img/icons/star.png" alt="">
+            <img src="./assets/img/icons/star.png" alt="">
+            <br> <br>
+            <hr>
+            <br> <br>
+            <p>Franchement,  j'aime bien, on remarque que c'est le début du site par sa façon d'être conçu, j'aime beaucoup la page d'acceuil qui est belle, simple, et efficase</p>
         </div>
-        <div class="pochette">
-            <img src="assets/actu2.jpg">
-            <div class="info">
-                <h3>Album "Brave" de Landy</h3>
-                <p>L'album de Landy, sorti le 24 fevrier, est intitulé "Brave". Il comporte 16 titres, dont des collaborations avec des artistes tels que Gazo et SDM.</p>
-            </div>
-        </div>
-        <div class="pochette">
-            <img src="assets/actu3.jpg">
-            <div class="info">
-                <h3>Album "Chrome" de Ziak</h3>
-                <p>L'album de Ziak, sorti le 24 fevrier, est intitulé "Chrome". Il comporte 16 titres, dont des collaborations avec des artistes non communiquée</p>
-            </div>
+        <div class="avis">
+            <h3>TwoMini</h3>
+            <img src="./assets/img/icons/star.png" alt="">
+            <img src="./assets/img/icons/star.png" alt="">
+            <img src="./assets/img/icons/star.png" alt="">
+            <br> <br>
+            <hr>
+            <br> <br>
+            <p>Une bonne qualité audio, c'est cool de ne plus avoir de pubs ahah, j'aime vraiment ce site je recommande !</p>
         </div>
     </div>
-
     <footer>
-      <p>&copy; 2023 Rap Zone</p>
-    </footer> 
-
+        <img src="./assets/img/Rap Zone.png" alt="">
+        <div class="footer-container">
+            <span>
+                © RapZone 
+                <br><br>
+                <a target="_blank" href="">Notre twitter</a>
+                <br><br>
+                <a target="_blank" href="">Notre instagram</a>
+                <br><br>
+                <a target="_blank" href="mailto:rapzone95200@gmail.com">Nous contacter par mail</a>
+            </span>
+        </div>
+    </footer>
 </body>
 </html>
-
-<div id="sfcwzz3hkcecglwrgq4ap9hg8pb5j7lnjxp"></div>
-<script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=wzz3hkcecglwrgq4ap9hg8pb5j7lnjxp&down=async" async></script>
-<br>
-
