--- a/mentions.html
+++ b/mentions.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
     <title>RapZone - Le meilleur de l'actu</title>
 </head>
 <body>
 
     <header>
-        
-        <img src="assets/Rap Zone.png" alt="" class="logo">
-
-        <nav class="nav">
-            <li><a href="index.html">Acceuil</a></li>
-            <li><a href="mentions.html">Informations</a></li>
-            <li><a href="nosoffre.html">Nos offres</a></li>
-
-            <li><a href="contact.html">Nous contacter</a></li>
-
+        <nav>
+            <ul>
+                <li><a href="index.html">Acceuil</a></li>
+                <li><a target="_blank" href="mentions.html">Informations</a></li>
+                <li><a target="_blank" href="nosoffre.html">Nos offres</a></li>
+                <li><a target="_blank" href="contact.html">Nous contacter</a></li>
+            </ul>
         </nav>
-
     </header>
 
     <div class="mentions">
