--- a/nosoffre.html
+++ b/nosoffre.html
@@ -1,64 +1,114 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<meta charset="utf-8">	
-<title>Nos offres</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+  <head>
+    <meta charset="utf-8" />
+    <title>Nos offres</title>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
+  </head>
 
-</head>
-
-<body>
-	
+  <body>
     <header>
-        
-        <img src="assets/Rap Zone.png" alt="" class="logo">
-
-        <nav class="nav">
+      <nav>
+        <ul>
             <li><a href="index.html">Acceuil</a></li>
-            <li><a href="mentions.html">Informations</a></li>
-            <li><a href="nosoffre.html">Nos offres</a></li>
-
-            <li><a href="contact.html">Nous contacter</a></li>
-        </nav>
-
+            <li><a target="_blank" href="mentions.html">Informations</a></li>
+            <li><a target="_blank" href="nosoffre.html">Nos offres</a></li>
+            <li><a target="_blank" href="contact.html">Nous contacter</a></li>
+        </ul>
+    </nav>
     </header>
 
     <div class="abonnements-grid">
-        <div class="abonnement">
-          <h2>Abonnement Personnel
-        </h2>
-          <p> <img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt=""> Musique sans pub <br>
-            <img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt=""> Écoutez votre musique partout - même hors connexion 
-            <br><img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt=""> Musique à la demande</p>
-          <a href="#" class="button">S'inscrire</a>
-        </div>
-        <div class="abonnement">
-          <h2>Abonnement famille</h2>
-          <p><img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt="">Accès illimité à la bibliothèque de musique</p>
-          <p><img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt="">Téléchargement de musique en illimité</p>
-          <a href="#" class="button">S'abonner</a>
-        </div>
-        <div class="abonnement">
-          <h2>Abonnement Étudiants</h2>
-          <p><img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt="">Tarif spécial pour les étudiants éligibles inscrits dans des universités</p>
-          <p><img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt="">Musique sans pub</p>
-          <p><img class="validate" src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png" alt="">Écoutez votre musique partout - même hors connexion</p>
-          <a href="#" class="button">S'abonner</a>
-        </div>
+      <div class="abonnement">
+        <h2>Abonnement Personnel</h2>
+        <p>
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />
+          Musique sans pub <br />
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />
+          Écoutez votre musique partout - même hors connexion <br /><img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />
+          Musique à la demande
+        </p>
+        <a href="#" class="button">S'inscrire</a>
       </div>
-      
-      <div class="abonnements-grid">
-        <div class="abonnement">
-          <img src="https://cdn-icons-png.flaticon.com/128/456/456212.png" alt="">
-        </div>
-        <div class="abonnement">
-          <img src="https://cdn-icons-png.flaticon.com/128/9424/9424591.png" alt="">
-        </div>
-        <div class="abonnement">
-          <img src="https://cdn-icons-png.flaticon.com/128/3068/3068327.png" alt="">
-        </div>
+      <div class="abonnement">
+        <h2>Abonnement famille</h2>
+        <p>
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />Accès illimité à la bibliothèque de musique
+        </p>
+        <p>
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />Téléchargement de musique en illimité
+        </p>
+        <a href="#" class="button">S'abonner</a>
       </div>
-</body>
- 
+      <div class="abonnement">
+        <h2>Abonnement Étudiants</h2>
+        <p>
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />Tarif spécial pour les étudiants éligibles inscrits dans des
+          universités
+        </p>
+        <p>
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />Musique sans pub
+        </p>
+        <p>
+          <img
+            class="validate"
+            src="https://cdn-icons-png.flaticon.com/512/3388/3388530.png"
+            alt=""
+          />Écoutez votre musique partout - même hors connexion
+        </p>
+        <a href="#" class="button">S'abonner</a>
+      </div>
+    </div>
 
+    <div class="abonnements-grid">
+      <div class="abonnement">
+        <img
+          src="https://cdn-icons-png.flaticon.com/128/456/456212.png"
+          alt=""
+        />
+      </div>
+      <div class="abonnement">
+        <img
+          src="https://cdn-icons-png.flaticon.com/128/9424/9424591.png"
+          alt=""
+        />
+      </div>
+      <div class="abonnement">
+        <img
+          src="https://cdn-icons-png.flaticon.com/128/3068/3068327.png"
+          alt=""
+        />
+      </div>
+    </div>
+  </body>
+</html>
